--- a/src/components/navigation/navigation.module.scss
+++ b/src/components/navigation/navigation.module.scss
@@ -19,6 +19,10 @@
   }
 
   @media (min-width: $screenMd) {
+    margin: $gutterWidthSm 0 0 $gutterWidthSm;
+  }
+
+  @media (min-width: $screenLg) {
     margin: $gutterWidth 0 0 $gutterWidth;
   }
 }
