--- a/src/scss/education.module.scss
+++ b/src/scss/education.module.scss
@@ -1,3 +1,7 @@
+@import "./variables";
 .heroTitle {
-  font-size: 6rem;
+  @media (max-width: $screenSmMax) {
+    font-size: 6rem;
+    line-height: 2.1;
+  }
 }
